fixed projects section on mobile version

--- a/src/components/Projects/Project/ProjectItem.module.scss
+++ b/src/components/Projects/Project/ProjectItem.module.scss
@@ -7,10 +7,11 @@
   flex-direction: column;
 
   background-color: var(--white-color);
-  color: var(--secondary-font-color);
+  color: var(--main-background);
 
   align-items: center;
   justify-content: center;
+  text-align: center;
 
   position: relative;
 
