--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -53,6 +53,7 @@ h1,
 .h1 {
   font-size: 30px;
   font-weight: 400;
+  margin: 20px 0;
 
   @include media(">=laptop") {
     font-size: 36px;
@@ -62,7 +63,7 @@ h1,
 h2,
 .h2 {
   font-size: 26px;
-  font-weight: 500;
+  font-weight: 600;
 
   @include media(">=laptop") {
     font-size: 26px;
@@ -89,6 +90,8 @@ p,
 .p {
   font-size: 16px;
   font-weight: 600;
+
+  margin: 20px auto;
 }
 
 p.small {
